--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,8 @@
   justify-content: space-between;
 }
 .peopledetail__filterbtn {
-  cursor: pointer
+  cursor: pointer;
+  margin: 0 10px;
 }
 .reset__filters {
   margin: 1rem 0;
