--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
-/* #root {
+body {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-} */
+  background-color: #1f1f1f;
+}
+.app__starwars-logo {
+  width: 150px;
+}
