--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -61,6 +61,9 @@
 .search__filters__chip {
   padding: 0 20px !important ;
 }
+.search__character__cancel {
+  margin-left: 0.5rem !important;
+}
 .spinner {
   width: 100%;
   display: flex;
