--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,11 +4,23 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 2rem;
 }
 .starwars__container {
-  margin-top: 1rem;
   width: 800px;
+}
+.navigation {
+  margin: 0;
+  background-color:  #1f1f1f;
+  z-index: 10;
+  padding-bottom: 10px;
+}
+.navigation__image-container {
+  width: 100;
+  display: flex;
+  justify-content: center;
+}
+.navigation img {
+  margin: 20px 0;
 }
 .people__accordion {
   margin-bottom: 6rem;
