--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,11 @@
+:root {
+  --main-bg-color: #101010;
+}
+
 body {
   max-width: 1280px;
   margin: 0 auto;
-  background-color: #1f1f1f;
+  background-color: var(--main-bg-color);
 }
 .app__starwars-logo {
   width: 150px;
