--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,4 @@
+
 .app {
   width: 800px;
   margin: 0 auto;
@@ -10,7 +11,7 @@
 }
 .navigation {
   margin: 0;
-  background-color:  #1f1f1f;
+  background-color: var(--main-bg-color);
   z-index: 10;
   padding-bottom: 10px;
 }
@@ -56,7 +57,7 @@
   cursor: pointer;
 }
 .poepledetail__films__film:hover {
-  color: var(--primary-color);
+  color: var(--main-bg-color);
 }
 .search__filters {
   margin: 1rem 0;
@@ -68,7 +69,7 @@
   position: absolute;
   top: -1rem;
   left: 0rem;
-  border: 1px solid #1f1f1f;
+  border: 1px solid #101010;
 }
 .search__filters__chip {
   padding: 0 20px !important ;
